fix sezione footer in stretch verso l'alto

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body{
     min-width: 560px;
 }
 footer{
-    height: 9vh;
+    height: 84px;
     background-color: #282828;
     margin: 0 auto;
 }
@@ -23,14 +23,14 @@ footer{
     display: flex;
 }
 section.top-section{
-    height:67.9px;
+    height:68px;
     background-color: #080b12;
     justify-content: space-between;
     align-items: center;
 }
 
 .container{
-    height: 84vh;
+    height: calc(100vh - 84px - 68px);
     
 }
 .left-main-menu{
@@ -239,7 +239,7 @@ div.player .comand, .riproduction-bar{
 }
 
 .comand{
-    width: 30%;
+    width: 45%;
     justify-content: space-evenly;
     align-items: center;
     margin: 0 auto;
@@ -257,7 +257,7 @@ div.player .comand, .riproduction-bar{
 div.riproduction-bar{
     margin: auto;
     justify-content: space-evenly;
-    width: 40%;
+    width: 70%;
     padding-top: 5px;
     align-items: center;
 }
